Support focal package for nectar-openstack
Change-Id: I40989c53038627e96f90a19389def472fb29299e

--- a/python.yaml
+++ b/python.yaml
@@ -143,6 +143,9 @@
       - '{name}-bionic-deb-package':
          access: 'nobody'
          organisation: 'internal'
+      - '{name}-focal-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: openstacksdk
