Fix the nectar-openstack organisation
Change-Id: I97bf3074141ce4b09bd0a474300ef864a592d044

--- a/python.yaml
+++ b/python.yaml
@@ -145,7 +145,7 @@
          organisation: 'internal'
       - '{name}-focal-deb-package':
          access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         organisation: 'internal'
 
 - project:
     name: openstacksdk
