Add new job for deploying control repo (not diff)
Introduce a new job that will, on merge of a control repo (e.g.
puppet-site-melbournetest), run r10k and deploy the 'master' branch into
a specific directory specified by config files created by Change
Ic5edb36a43c6008552362bb77b2fabf978079326

Also make puppet-site-melbournetest run this job.

If this works, we will update symlinks to point
/etc/puppetlab/code/environment/melbournetest to the new directory.

Change-Id: I34180d87345351c136e9b204d9d57d1bdd73a40e

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -303,6 +303,19 @@
           command: /usr/local/sbin/deploy-control-repo.sh $GERRIT_PROJECT
 
 - builder:
+    name: r10k-deploy-control-repo
+    builders:
+      - ssh-builder:
+          ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
+          command: |
+            set -u
+            set -e
+            set -x
+            # strips 'internal/puppet-site-nectar' to 'nectar'
+            ENVIRONMENT=`echo $GERRIT_PROJECT | cut -f2 -d'/' | cut -f3 -d'-'`
+            r10k -c /etc/puppetlabs/r10k/r10k-$ENVIRONMENT.yaml deploy environment --puppetfile master
+
+- builder:
     name: r10k-deploy
     builders:
       - shell: |
