fix: cleanup job
After Change Id427f13562d1a9f5c73e6b90f12a8ff6eefe4d37, the
r10k-deploy.sh script exit with value of 1 when running the cleanup job.
This makes jenkins thinks that the script has failed, but it actually
hasn't.

Avoid all this by calling r10k directly, with a || true so it returns 0
regardless.

Change-Id: If9a9a2650a15776e3f0ff68de096723aeca94256

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -344,7 +344,9 @@
           ssh-user-ip: puppet@{r10k_host}:22
           command: |
             export R10K_HOST={r10k_host}
-            r10k-deploy.sh -e master
+            # deploy a dummy env (master), which also deletes all environments
+            # belonging to deleted branches this returns 1 so || true
+            r10k deploy environment --puppetfile master || true
 
 - builder:
     name: r10k-diff-catalog-control-repo
