--- a/python.yaml
+++ b/python.yaml
@@ -402,7 +402,7 @@
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py36'
+         environment: 'py38'
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
@@ -417,8 +417,8 @@
       - '{name}-container-{ubuntu_release}-{os_release}':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
-         ubuntu_release: 'bionic'
-         os_release: 'train'
+         ubuntu_release: 'focal'
+         os_release: 'ussuri'
 
 
 - project:
