--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -39,6 +39,9 @@
       - ssh-builder:
           ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
           command: /var/lib/puppet/librarian/bin/puppet-librarian-install.sh
+      - ssh-builder:
+          ssh-user-ip: puppet@puppet.test.rc.nectar.org.au:22
+          command: /var/lib/puppet/librarian/bin/puppet-librarian-install.sh
 
 
 - builder:
