--- a/puppet.yaml
+++ b/puppet.yaml
@@ -1164,7 +1164,7 @@
 
     builders:
       - ssh-builder:
-          ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
+          ssh-user-ip: puppet@puppet.test.rc.nectar.org.au:22
           command: /usr/local/sbin/update-test-modules.sh $GERRIT_PROJECT
 
     publishers:
