Update CI for puppet.test to become puppet master
In Change If87c4311a9022aa582f61f07ac9185a9489a804e, we updated
puppet.test to become a puppet master. This disables the
module/environment cron rsync between puppet and puppet.test.

Since puppet.test is a standalone master, CI jobs now need to run on it
for cases like:
- when modules (e.g. puppet-profile) are updated
- when puppet-library is updated
- when control repos (e.g. puppet-site-melbournetest) is updated

Change-Id: Ifbc747ea8f0d4d3fc8ead3fb6f5855beeea78ef5

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -39,6 +39,9 @@
       - ssh-builder:
           ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
           command: /var/lib/puppet/librarian/bin/puppet-librarian-install.sh
+      - ssh-builder:
+          ssh-user-ip: puppet@puppet.test.rc.nectar.org.au:22
+          command: /var/lib/puppet/librarian/bin/puppet-librarian-install.sh
 
 
 - builder:
@@ -306,7 +309,7 @@
     name: r10k-deploy-control-repo
     builders:
       - ssh-builder:
-          ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
+          ssh-user-ip: puppet@{puppet_host}:22
           command: |
             set -u
             set -e
