Deploy hieradata on puppet.test too
In Change Ifbc747ea8f0d4d3fc8ead3fb6f5855beeea78ef5 we changed
puppet.test to become an independent puppet master. This means the
global hieradata deploy job needs to run on puppet.test too.

Change-Id: Ic42590e6b96e5e53726a420216b21abf028a707f

--- a/other.yaml
+++ b/other.yaml
@@ -391,6 +391,9 @@
       - ssh-builder:
           ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
           command: /usr/local/sbin/global-hieradata-deploy.sh
+      - ssh-builder:
+          ssh-user-ip: puppet@puppet.test.rc.nectar.org.au:22
+          command: /usr/local/sbin/global-hieradata-deploy.sh
 
     publishers:
       !include: publisher.yaml.inc
