Move rctest, monashtest to new r10k style deployment
Change-Id: If4ace1d4a9d73c52b230868ce78d2ffcb7727e1e

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -644,6 +644,10 @@
          access: 'nobody'
          organisation: 'nectar-monash'
          r10k_host: 'puppet.test.rc.nectar.org.au'
+      - '{name}-r10k-deploy-control-repo':
+         access: 'nobody'
+         organisation: 'nectar-monash'
+         puppet_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -869,6 +873,10 @@
          access: 'nobody'
          organisation: 'internal'
          r10k_host: 'puppet.test.rc.nectar.org.au'
+      - '{name}-r10k-deploy-control-repo':
+         access: 'nobody'
+         organisation: 'internal'
+         puppet_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
