--- a/puppet.yaml
+++ b/puppet.yaml
@@ -125,6 +125,13 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: puppet-ironic
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-manuka
     jobs:
       - '{name}-puppet-unit':
