change intersect r10k deploy to public interface
r10k_deploy.sh uses r10k_host to specify test run string
this doesn't work outside melbourne with mgmt

Change-Id: I89a8e976362f15d7d847b18c4891a8805c747e69

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -983,7 +983,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
