Move thespian, undertest to new r10k style deployment
Miss these out as part of Change
If4ace1d4a9d73c52b230868ce78d2ffcb7727e1e

Change-Id: I3cea57f7f5602def6ca7c9b07e71fae22aacc217

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -830,6 +830,10 @@
          access: 'nobody'
          organisation: 'resplat-hpc'
          r10k_host: 'puppet.test.rc.nectar.org.au'
+      - '{name}-r10k-deploy-control-repo':
+         access: 'nobody'
+         organisation: 'resplat-hpc'
+         puppet_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -909,6 +913,10 @@
          access: 'nobody'
          organisation: 'internal'
          r10k_host: 'puppet.test.rc.nectar.org.au'
+      - '{name}-r10k-deploy-control-repo':
+         access: 'nobody'
+         organisation: 'internal'
+         puppet_host: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
