change non-melbourne sites r10k deploy to public interface
Change-Id: I24d3f438dedb27e352f1b9dbde4f0a8bf8e0bf7c

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -673,7 +673,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -698,7 +698,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -773,7 +773,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -798,7 +798,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -849,7 +849,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
@@ -926,7 +926,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
@@ -951,7 +951,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
@@ -1001,7 +1001,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'QRIScloud'
