change non-melbourne sites r10k deploy to public interface
Change-Id: I24d3f438dedb27e352f1b9dbde4f0a8bf8e0bf7c

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -596,15 +596,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -679,15 +679,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -704,15 +704,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -729,15 +729,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -754,15 +754,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -779,15 +779,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -804,15 +804,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -854,15 +854,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -933,15 +933,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -958,15 +958,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -987,11 +987,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -1008,15 +1008,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'QRIScloud'
